# AgroMItr

./: README.md  Scraper.py  TranslationServer.py  browser.py  client.py  main.py  mandi_server.py  pyproject.toml  ragServer.py  req.txt  searchserver.py  weather.py
